syntax = "proto2";

package org.infinispan.global.m.core;

// TODO add TypeIDs
message DoubleSummaryStatistics {
    optional uint64 count = 1;
    optional double sum = 2;
    optional double min = 3;
    optional double max = 4;
}

message IntSummaryStatistics {
    optional uint64 count = 1;
    optional uint64 sum = 2;
    optional uint32 min = 3;
    optional uint32 max = 4;
}

message LongSummaryStatistics {
    optional uint64 count = 1;
    optional uint64 sum = 2;
    optional uint64 min = 3;
    optional uint64 max = 4;
}
